--- a/.github/workflows/update_soccer_pkg.yml
+++ b/.github/workflows/update_soccer_pkg.yml
@@ -1,21 +1,29 @@
-name: Update Main Repo
+name: Trigger soccer_pkg dependencies update
 
 on:
   push:
     branches:
-      - main  # or any branch you want to trigger on
+      - main
 
 jobs:
-  update:
+  trigger:
     runs-on: ubuntu-latest
+    
+    permissions:
+      contents: write
 
     steps:
-      - name: Checkout the external repository
-        uses: actions/checkout@v3
-
-      - name: Trigger update in main repository
+      - name: Trigger update workflow in main repository
         run: |
-          curl -X POST -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-          -H "Accept: application/vnd.github.v3+json" \
-          https://api.github.com/repos/Blenders-FC/blenders_soccer_pkg/dispatches \
-          -d '{"event_type": "update_subtrees"}'
+          # Set the required variables
+          repo_owner=Blenders-FC
+          repo_name=blenders_soccer_pkg
+          event_type="update_subtrees"
+  
+          curl -L \
+            -X POST \
+            -H "Accept: application/vnd.github+json" \
+            -H "Authorization: Bearer ${{ secrets.PAT }}" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            https://api.github.com/repos/$repo_owner/$repo_name/dispatches \
+            -d "{\"event_type\": \"$event_type\"}"
