[BT] Movement action definition

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,6 +53,7 @@ set(SOURCE_FILES
   src/nodes/turn_right_action.cpp
   src/nodes/walk_to_target_action.cpp
   src/nodes/online_walk_to_target_action.cpp
+  src/nodes/timer_condition.cpp
 )
 
 
@@ -208,6 +209,7 @@ add_executable(motion_controller_node
   src/nodes/turn_right_action.cpp
   src/nodes/walk_to_target_action.cpp
   src/nodes/online_walk_to_target_action.cpp
+  src/nodes/timer_condition.cpp
 )
 
 ## Add cmake target dependencies of the library
