--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,10 +28,10 @@ set(BT_SOURCE_FILES
   ${PROJECT_SOURCE_DIR}/../ROS-Behavior-Tree/behavior_tree_core/src/decorator_node.cpp
   ${PROJECT_SOURCE_DIR}/../ROS-Behavior-Tree/behavior_tree_core/src/leaf_node.cpp
   ${PROJECT_SOURCE_DIR}/../ROS-Behavior-Tree/behavior_tree_core/src/tree_node.cpp
+  ${PROJECT_SOURCE_DIR}/../ROS-Behavior-Tree/behavior_tree_core/src/dot_bt.cpp
 )
 
 set(SOURCE_FILES
-  src/motion_controller_node.cpp
   src/nodes/ball_detected_condition.cpp
   src/nodes/ball_direction_condition.cpp
   src/nodes/ball_in_center_condition.cpp
@@ -53,6 +53,18 @@ set(SOURCE_FILES
   src/nodes/turn_right_action.cpp
   src/nodes/walk_to_target_action.cpp
   src/nodes/online_walk_to_target_action.cpp
+)
+
+set(SHARED_LIBRARIES
+  ${catkin_LIBRARIES}
+  ${Eigen3_LIBRARIES}
+  behavior_tree_core
+  cb_data_manager
+  walking_controller
+  utils
+  fov_calculation
+  blackboard
+  tree_builder
 )
 
 
@@ -187,27 +199,15 @@ include_directories(
 #add_executable(${PROJECT_NAME}_node src/soccer_pkg_node.cpp)
 add_executable(motion_controller_node
   src/motion_controller_node.cpp
-  src/nodes/ball_detected_condition.cpp
-  src/nodes/ball_direction_condition.cpp
-  src/nodes/ball_in_center_condition.cpp
-  src/nodes/center_ball_action.cpp
-  src/nodes/choose_kick_foot_condition.cpp
-  src/nodes/fov_walking_action.cpp
-  src/nodes/get_up_backwards_action.cpp
-  src/nodes/get_up_forward_action.cpp
-  src/nodes/left_kick_action.cpp
-  src/nodes/manager_running_condition.cpp
-  src/nodes/manager_done_condition.cpp
-  src/nodes/right_kick_action.cpp
-  src/nodes/robot_fallen_condition.cpp
-  src/nodes/search_ball_action.cpp
-  src/nodes/simple_walk_action.cpp
-  src/nodes/stand_up_action.cpp
-  src/nodes/start_button_condition.cpp
-  src/nodes/turn_left_action.cpp
-  src/nodes/turn_right_action.cpp
-  src/nodes/walk_to_target_action.cpp
-  src/nodes/online_walk_to_target_action.cpp
+  src/tree_builder.cpp
+  ${SOURCE_FILES}
+)
+
+add_executable(tree_visualization
+  src/tree_visualization.cpp
+  src/tree_builder.cpp
+  ${PROJECT_SOURCE_DIR}/../ROS-Behavior-Tree/behavior_tree_core/src/dot_bt.cpp
+  ${SOURCE_FILES}
 )
 
 ## Add cmake target dependencies of the library
@@ -237,22 +237,20 @@ add_library(walking_controller src/walking_controller.cpp)
 add_library(utils src/utils.cpp)
 add_library(fov_calculation src/fov_calculation.cpp)
 add_library(blackboard src/blackboard.cpp)
+add_library(tree_builder src/tree_builder.cpp)
 
 target_link_libraries(motion_controller_node
-  ${catkin_LIBRARIES}
-  ${Eigen3_LIBRARIES}
-  behavior_tree_core
-  cb_data_manager
-  walking_controller
-  utils
-  fov_calculation
-  blackboard
+  ${SHARED_LIBRARIES}
 )
 
 target_link_libraries(cb_data_manager
   ${catkin_LIBRARIES}
   ${Boost_LIBRARIES}
   robotis_framework_common
+)
+
+target_link_libraries(tree_visualization
+  ${SHARED_LIBRARIES}
 )
 
 #############
