--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,6 +53,7 @@ set(SOURCE_FILES
   src/nodes/turn_right_action.cpp
   src/nodes/walk_to_target_action.cpp
   src/nodes/online_walk_to_target_action.cpp
+  src/nodes/timer_condition.cpp
 )
 
 set(SHARED_LIBRARIES
