fix(repeat_n_times): added cpp to CMakeList and tree_builder. Fixed declaration of function

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,6 +65,7 @@ set(SOURCE_FILES
   src/nodes/walk_to_point_action.cpp
   src/nodes/walk_to_target_action.cpp
   src/repeat_node.cpp
+  src/nodes/repeat_n_times.cpp
 )
 
 set(SHARED_LIBRARIES
