--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,6 +66,7 @@ set(SOURCE_FILES
   src/nodes/walk_to_target_action.cpp
   src/repeat_node.cpp
   src/nodes/repeat_n_times.cpp
+  src/nodes/send_head_to_home_reset.cpp
 )
 
 set(SHARED_LIBRARIES
