--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,6 +55,7 @@ set(SOURCE_FILES
   src/nodes/right_kick_action.cpp
   src/nodes/robot_fallen_condition.cpp
   src/nodes/search_ball_action.cpp
+  src/nodes/search_sinusoidal_action.cpp
   src/nodes/send_head_to_home_action.cpp
   src/nodes/simple_walk_action.cpp
   src/nodes/stand_up_action.cpp
