--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,6 +70,8 @@ set(SOURCE_FILES
   src/nodes/repeat_n_times.cpp
   src/nodes/send_head_to_home_reset.cpp
   src/nodes/referee_state_condition.cpp
+  src/nodes/ref_entry_condition.cpp
+  
 )
 
 set(SHARED_LIBRARIES
